Updated the package.json to include a version number. Keeps npm to STFU.

--- a/suites/aws-tools/package.json
+++ b/suites/aws-tools/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "aws-tools",
+	"version": "0.1.0",
 	"dependencies": {
-		"libxmljs": ">=0.4.x",
+		"libxmljs": ">=0.x",
 		"libxml-to-js": ">=0.1.x",
 		"aws2js": ">=0.2.x"
 	},
