--- a/suites/aws-tools/package.json
+++ b/suites/aws-tools/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "aws-tools",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"dependencies": {
 		"libxmljs": ">=0.x",
-		"libxml-to-js": ">=0.1.x",
-		"aws2js": ">=0.3.x"
+		"libxml-to-js": ">=0.3.0",
+		"aws2js": ">=0.4.0"
 	},
 	"engines": {
-		"node": ">=0.4.x"
+		"node": ">=0.4.10"
 	},
 	"homepage": "https://github.com/SaltwaterC/sysadmin-tools",
 	"author": {
